--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
 
         <nav>
             <ul>
-                <li><a href=""><i></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-house"></i>Home</a></li>
+                <li><a href="#"><i class="fa-solid fa-user"></i>About Me</a></li>
+                <li><a href="#"><i class="fa-solid fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="#"><i class="fa-solid fa-server"></i>Services</a></li>
+                <li><a href="#"><i class="fa-solid fa-envelope"></i>Contact</a></li>
             </ul>
         </nav>
-
     </header>
 
 
