--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                 <li><a href="#"><i class="fa-solid fa-envelope"></i>Contact</a></li>
             </ul>
         </nav>
+
+        <div class="footer">
+            <p>&copy; Copyright 2023<br>Designed By <a href="https://MartinHuang.ooxx" target="_blank">MartinHuang.ooxx</a></p>
+        </div>
     </header>
 
 
