--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <img src="img/profile-img.jpg" alt=""width="150px">
             <h1>Martin Huang</h1>
             <div class="social-icons">
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-telegram"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100006934332320"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://t.me/hela6415614"><i class="fa-brands fa-telegram"></i></a>
+                <a href="https://github.com/HuangMartin"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
 
