--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
         </div>
     </header>
 
-
-
-
-
+    <i class="fa-solid fa-bars" id="MenuBtn"></i>
 
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/aa5f332820.js" crossorigin="anonymous"></script>
