--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
 
     <header>
-
         <div class="profile">
             <img src="img/profile-img.jpg" alt=""width="150px">
             <h1>Martin Huang</h1>
@@ -20,7 +19,6 @@
                 <a href="https://github.com/HuangMartin"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
-
         <nav>
             <ul>
                 <li><a href="#" class="active"><i class="fa-solid fa-house"></i>Home</a></li>
@@ -30,13 +28,20 @@
                 <li><a href="#"><i class="fa-solid fa-envelope"></i>Contact</a></li>
             </ul>
         </nav>
-
         <div class="footer">
             <p>&copy; Copyright 2023<br>Designed By <a href="https://MartinHuang.ooxx" target="_blank">MartinHuang.ooxx</a></p>
         </div>
     </header>
 
     <i class="fa-solid fa-bars" id="MenuBtn"></i>
+
+    <main>
+        <section id="home">
+            <div class="home-row">
+
+            </div>
+        </section>
+    </main>
 
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/aa5f332820.js" crossorigin="anonymous"></script>
