--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <main>
         <section id="home">
             <div class="home-row">
-
+                <h1>Holla! This is<br>Martin Huang<span>.</span></h1>
+                <p>I'm a <span class="auto-input">coder</span></p>
             </div>
         </section>
     </main>
