--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     <main>
         <section id="home">
             <div class="home-row">
-                <h1>Holla! This is<br>Martin Huang<span>.</span></h1>
-                <p>I'm a <span class="auto-input">coder</span></p>
+                <h1>您好!<br>我的名字是星翔<span>.</span></h1>
+                <p>我是個 <span class="auto-input"></span></p>
             </div>
         </section>
     </main>
-
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/aa5f332820.js" crossorigin="anonymous"></script>
 </body>
