--- a/index.html
+++ b/index.html
@@ -42,6 +42,49 @@
                 <p>我是個 <span class="auto-input"></span></p>
             </div>
         </section>
+
+
+        <section id="about">
+            <h1 class="sub-heading">關於我</h1>
+            <div class="divider"></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Cumque maxime aliquam consequuntur odio vero, quasi amet saepe repellat quos voluptate rem. 
+            Veniam, autem minima. Quis officia dolorum voluptatibus cupiditate harum.
+            </p>
+
+            <div class="about-col">
+                <div class="img-col">
+                    <img src="img/profile-img.jpg" alt="...">
+                </div>
+
+                <div class="info-col">
+                    <h2>部落客</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Voluptatibus, expedita minus? 
+                        Fuga rem iure totam hic provident vel quae magnam.</p>
+                </div>
+                <div class="icon-list-col">
+                    <div class="icon-list"></div>
+                    <ul>
+                        <li><i class="fa-solid fa-angle-right"></i> <strong>生日:</strong> <span>2000/07/23</span></li>
+                        <li><i class="fa-solid fa-angle-right"></i> <strong>年齡:</strong> <span>23</span></li>
+                        <li><i class="fa-solid fa-angle-right"></i> <strong>居住地:</strong> <span>臺中</span></li>
+                    </ul>
+                </div>
+
+                <div class="icon-list-col">
+                    <div class="icon-list"></div>
+                    <ul>
+                        <li><i class="fa-solid fa-angle-right"></i> <strong>行動電話:</strong> <span>0939-072-2xx</span></li>
+                        <li><i class="fa-solid fa-angle-right"></i> <strong>最高學歷:</strong> <span>國立台中科技大學資訊工程系</span></li>
+                        <li><i class="fa-solid fa-angle-right"></i> <strong>電子郵件:</strong> <span>darkknight411032@gmail.com</span></li>
+                    </ul>
+                </div>
+
+            </div>
+
+        </section>
+
     </main>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="script.js"></script>
