--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#" class="active"><i class="fa-solid fa-house"></i>Home</a></li>
-                <li><a href="#"><i class="fa-solid fa-user"></i>About Me</a></li>
-                <li><a href="#"><i class="fa-solid fa-briefcase"></i>Portfolio</a></li>
-                <li><a href="#"><i class="fa-solid fa-server"></i>Services</a></li>
-                <li><a href="#"><i class="fa-solid fa-envelope"></i>Contact</a></li>
+                <li><a href="#"><i class="fa-solid fa-coins"></i>財經</a></li>
+                <li><a href="#"><i class="fa-solid fa-clapperboard"></i>影評</a></li>
+                <li><a href="#"><i class="fa-solid fa-plane-departure"></i>旅遊</a></li>
+                <li><a href="#"><i class="fa-solid fa-computer"></i>科技</a></li>
+                <li><a href="#"><i class="fa-solid fa-wine-bottle"></i>烈酒及雪茄</a></li>
             </ul>
         </nav>
         <div class="footer">
