--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
             <h1>Martin Huang</h1>
             <div class="social-icons">
                 <a href="https://www.facebook.com/profile.php?id=100006934332320"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://t.me/hela6415614"><i class="fa-brands fa-telegram"></i></a>
                 <a href="https://github.com/HuangMartin"><i class="fa-brands fa-github"></i></a>
+                <a href="https://t.me/hela6415614"><i class="fa-brands fa-telegram"></i></a>
+                <a href="https://mail.google.com/mail/u/0/?tab=wm#inbox?compose=new"><i class="fa-brands fa-google"></i></a>
             </div>
         </div>
         <nav>
@@ -38,7 +39,7 @@
     <main>
         <section id="home">
             <div class="home-row">
-                <h1>您好!<br>我的名字是星翔<span>.</span></h1>
+                <h1>您好!我的名字是星翔<br>很高興認識您!</h1>
                 <p>我是個 <span class="auto-input"></span></p>
             </div>
         </section>
@@ -73,7 +74,7 @@
                         <div class="icon-list">
                             <ul>
                                 <li><i class="fa-solid fa-angle-right"></i> <strong>行動電話:</strong> <span>0939-0xx-2xx</span></li>
-                                <li><i class="fa-solid fa-angle-right"></i> <strong>最高學歷:</strong> <span>國立台中科技大學資訊工程系</span></li>
+                                <li><i class="fa-solid fa-angle-right"></i> <strong>最高學歷:</strong> <span>國立台中科技大學進修部資訊工程系</span></li>
                                 <li><i class="fa-solid fa-angle-right"></i> <strong>電子郵件:</strong> <span>darkknight411032@gmail.com</span></li>
                                 </ul>
                         </div>
@@ -88,3 +89,5 @@
     <script src="https://kit.fontawesome.com/aa5f332820.js" crossorigin="anonymous"></script>
 </body>
 </html>
+
+<!-- 41:26 -->
