--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <ul>
                 <li><a href="#"><i class="fa-solid fa-coins"></i>財經</a></li>
                 <li><a href="#"><i class="fa-solid fa-clapperboard"></i>影評</a></li>
-                <li><a href="#"><i class="fa-solid fa-plane-departure"></i>旅遊</a></li>
-                <li><a href="#"><i class="fa-solid fa-computer"></i>科技</a></li>
+                <li><a href="#"><i class="fa-solid fa-train-subway"></i>旅遊</a></li>
+                <li><a href="#"><i class="fa-solid fa-mobile-screen-button"></i>科技</a></li>
                 <li><a href="#"><i class="fa-solid fa-wine-bottle"></i>烈酒及雪茄</a></li>
             </ul>
         </nav>
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="info-col">
-                    <h2>部落客</h2>
+                    <h2>科技愛好者</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                         Voluptatibus, expedita minus? 
                         Fuga rem iure totam hic provident vel quae magnam.</p>
