--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@
                 <a href="https://www.facebook.com/profile.php?id=100006934332320"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://github.com/HuangMartin"><i class="fa-brands fa-github"></i></a>
                 <a href="https://t.me/hela6415614"><i class="fa-brands fa-telegram"></i></a>
-                <a href="https://mail.google.com/mail/u/0/?tab=wm#inbox?compose=new"><i class="fa-brands fa-google"></i></a>
             </div>
         </div>
         <nav>
             <ul>
-                <li><a href="#"><i class="fa-solid fa-coins"></i>財經</a></li>
-                <li><a href="#"><i class="fa-solid fa-clapperboard"></i>影評</a></li>
-                <li><a href="#"><i class="fa-solid fa-train-subway"></i>旅遊</a></li>
-                <li><a href="#"><i class="fa-solid fa-mobile-screen-button"></i>科技</a></li>
-                <li><a href="#"><i class="fa-solid fa-wine-bottle"></i>烈酒及雪茄</a></li>
+                <li><a href="#"><i class="fa-solid fa-house"></i>主頁</a></li>
+                <li><a href="#"><i class="fa-solid fa-user"></i>關於我</a></li>
+                <li><a href="#"><i class="fa-solid fa-briefcase"></i>作品集</a></li>
+                <li><a href="#"><i class="fa-solid fa-server"></i>Service</a></li>
+                <li><a href="#"><i class="fa-solid fa-envelope"></i>取得聯繫</a></li>
             </ul>
         </nav>
         <div class="footer">
@@ -60,7 +59,7 @@
 
                 <div class="info-col">
                     <h2>科技愛好者</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                    <p class="sub-para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                         Voluptatibus, expedita minus? 
                         Fuga rem iure totam hic provident vel quae magnam.</p>
                     <div class="icon-list-col">
@@ -80,7 +79,13 @@
                         </div>
                     </div>
                 </div>
-
+        </section>
+        <section id="fact">
+            <h1 class="sub-heading">Facts</h1>
+            <div class="divider"></div>
+            <p class="sub-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Voluptatibus, nostrum, pariatur distinctio repellendus tempora in officia corporis porro quia sapiente dicta, 
+                laudantium fugiat libero itaque incidunt. Fugit accusamus repellendus quam.</p>
         </section>
 
     </main>
@@ -90,4 +95,4 @@
 </body>
 </html>
 
-<!-- 41:26 -->
+<!-- 46:18 -->
