--- a/index.html
+++ b/index.html
@@ -81,11 +81,37 @@
                 </div>
         </section>
         <section id="fact">
-            <h1 class="sub-heading">Facts</h1>
+            <h1 class="sub-heading">專業證照</h1>
             <div class="divider"></div>
-            <p class="sub-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Voluptatibus, nostrum, pariatur distinctio repellendus tempora in officia corporis porro quia sapiente dicta, 
-                laudantium fugiat libero itaque incidunt. Fugit accusamus repellendus quam.</p>
+            <p class="sub-para"></p>
+
+                <div class="fact-row">
+                    
+                    <div class="fact-box">
+                        <i class="fa-solid fa-toolbox"></i>
+                        <strong>電腦硬體裝修技術士</strong>
+                        <p>乙級</p>
+                    </div>
+
+                    <div class="fact-box">
+                        <i class="fa-solid fa-database"></i>
+                        <strong>微軟Azure知識認證</strong>
+                        <p>乙級</p>
+                    </div>
+
+                    <div class="fact-box">
+                        <i class="fa-solid fa-book"></i>
+                        <strong>商教會英語檢定</strong>
+                        <p>3級</p>
+                    </div>
+
+                    <div class="fact-box">
+                        <i class="fa-solid fa-book"></i>
+                        <strong>TOEIC英語檢定</strong>
+                        <p>550分</p>
+                    </div>
+
+                </div>
         </section>
 
     </main>
@@ -95,4 +121,4 @@
 </body>
 </html>
 
-<!-- 46:18 -->
+<!-- 49:39 -->
