--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <section id="fact">
             <h1 class="sub-heading">專業證照</h1>
             <div class="divider"></div>
-            <p class="sub-para"></p>
+            <p class="sub-para">雖說是參考用的,但求學期間逼不得已還是去考了幾張證照</p>
 
                 <div class="fact-row">
                     
@@ -96,7 +96,7 @@
                     <div class="fact-box">
                         <i class="fa-solid fa-database"></i>
                         <strong>微軟Azure知識認證</strong>
-                        <p>乙級</p>
+                        <p>初級</p>
                     </div>
 
                     <div class="fact-box">
