--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         <section id="about">
             <h1 class="sub-heading">關於我</h1>
             <div class="divider"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Cumque maxime aliquam consequuntur odio vero, 
-            quasi amet saepe repellat quos voluptate rem. 
+            <p class="sub-para">從國中開始就對電腦.手機非常感興趣，於是選擇了資訊科就讀<br>
+                雖然跟原先預期的有所落差，但也在求學期間慢慢找到學習的目標及方向<br>
+                設立這個網站的目的是為了當作side project，也讓廣大資訊科學子知道我們學的東西非常有展望性
             </p>
 
             <div class="about-col">
