--- a/index.html
+++ b/index.html
@@ -47,9 +47,14 @@
         <section id="about">
             <h1 class="sub-heading">關於我</h1>
             <div class="divider"></div>
-            <p class="sub-para">從國中開始就對電腦.手機非常感興趣，於是選擇了資訊科就讀<br>
-                雖然跟原先預期的有所落差，但也在求學期間慢慢找到學習的目標及方向<br>
-                設立這個網站的目的是為了當作side project，也讓廣大資訊科學子知道我們學的東西非常有展望性
+            <p class="sub-para">
+                一顆蘋果養百種人<br>
+                推導AI雛形的圖靈，代表的是軟體<br>
+                重塑手機的賈伯斯，代表的是潮流<br>
+                發現萬有引力的牛頓，代表的是智慧<br>
+                開啟人類思考的亞當，代表的是煩惱<br>
+                <br>
+                要當哪種人，先挑對那顆蘋果
             </p>
 
             <div class="about-col">
@@ -59,9 +64,9 @@
 
                 <div class="info-col">
                     <h2>科技愛好者</h2>
-                    <p class="sub-para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                        Voluptatibus, expedita minus? 
-                        Fuga rem iure totam hic provident vel quae magnam.</p>
+                    <p class="sub-para">
+                        有機械者必有機事，有機事者必有機心 <莊子．天地>
+                    </p>
                     <div class="icon-list-col">
                         <div class="icon-list">
                             <ul>
@@ -114,6 +119,88 @@
                 </div>
         </section>
 
+        <section id="skill">
+            <h1 class="sub-heading">軟體相關技術</h1>
+            <div class="divider"></div>
+            <p class="sub-para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Amet ea blanditiis ducimus atque? Culpa, laudantium.
+            </p>
+            <div class="skill-row">
+
+                <div class="skill-box">
+                    <div class="skill-info">
+                        <h2>Python</h2>
+                        <h2>略懂</h2>
+                    </div>
+                    <div class="skill-outter-line">
+                        <div class="skill-inner-line"></div>
+                    </div>
+                </div>
+
+                <div class="skill-box">
+                    <div class="skill-info">
+                        <h2>C++</h2>
+                        <h2>略懂</h2>
+                    </div>
+                    <div class="skill-outter-line">
+                        <div class="skill-inner-line"></div>
+                    </div>
+                </div>
+
+                <div class="skill-box">
+                    <div class="skill-info">
+                        <h2>Microsoft 辦公軟體</h2>
+                        <h2>精熟</h2>
+                    </div>
+                    <div class="skill-outter-line">
+                        <div class="skill-inner-line"></div>
+                    </div>
+                </div>
+
+                <div class="skill-box">
+                    <div class="skill-info">
+                        <h2>Visual Studio開發軟體</h2>
+                        <h2>精熟</h2>
+                    </div>
+                    <div class="skill-outter-line">
+                        <div class="skill-inner-line"></div>
+                    </div>
+                </div>
+
+                <div class="skill-box">
+                    <div class="skill-info">
+                        <h2>Windows系統</h2>
+                        <h2>精熟</h2>
+                    </div>
+                    <div class="skill-outter-line">
+                        <div class="skill-inner-line"></div>
+                    </div>
+                </div>
+
+                <div class="skill-box">
+                    <div class="skill-info">
+                        <h2>MacOS系統</h2>
+                        <h2>精熟</h2>
+                    </div>
+                    <div class="skill-outter-line">
+                        <div class="skill-inner-line"></div>
+                    </div>
+                </div>
+
+                <div class="skill-box">
+                    <div class="skill-info">
+                        <h2>Linux系統</h2>
+                        <h2>略懂</h2>
+                    </div>
+                    <div class="skill-outter-line">
+                        <div class="skill-inner-line"></div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
     </main>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="script.js"></script>
@@ -121,4 +208,10 @@
 </body>
 </html>
 
-<!-- 49:39 -->
+<!-- 49:39 
+<h2>Windows系統</h2>
+<h2>精熟</h2>
+<h2>MacOS系統</h2>
+<h2>精熟</h2>
+<h2>Linux系統</h2>
+<h2>略懂</h2> -->
