--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
                             <ul>
                                 <li><i class="fa-solid fa-angle-right"></i> <strong>生日:</strong> <span>2000/07/23</span></li>
                                 <li><i class="fa-solid fa-angle-right"></i> <strong>年齡:</strong> <span>23</span></li>
-                                <li><i class="fa-solid fa-angle-right"></i> <strong>居住地:</strong> <span>臺中</span></li>
+                                <li><i class="fa-solid fa-angle-right"></i> <strong>現居地:</strong> <span>臺中</span></li>
                             </ul>
                         </div>
                         <div class="icon-list">
                             <ul>
-                                <li><i class="fa-solid fa-angle-right"></i> <strong>行動電話:</strong> <span>0939-0xx-2xx</span></li>
-                                <li><i class="fa-solid fa-angle-right"></i> <strong>最高學歷:</strong> <span>國立台中科技大學進修部資訊工程系</span></li>
+                                <li><i class="fa-solid fa-angle-right"></i> <strong>興趣:</strong> <span>投資.旅遊.探索未知事物</span></li>
+                                <li><i class="fa-solid fa-angle-right"></i> <strong>專長:</strong> <span>籃球.游泳</span></li>
                                 <li><i class="fa-solid fa-angle-right"></i> <strong>電子郵件:</strong> <span>darkknight411032@gmail.com</span></li>
                                 </ul>
                         </div>
@@ -123,8 +123,11 @@
             <h1 class="sub-heading">軟體相關技術</h1>
             <div class="divider"></div>
             <p class="sub-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Amet ea blanditiis ducimus atque? Culpa, laudantium.
+                資工的學生嘛，程式語言一定都學過<br>
+                有些是上課教過，期末就忘了<br>
+                有些是課堂沒教，自己有興趣加減摸索玩玩看<br>
+                三家電腦系統都操作過，Linux算是這三個裡面最不熟的<br>
+                天天在摸IDE和Office說不熟練好像有點說不過去
             </p>
             <div class="skill-row">
 
@@ -134,7 +137,7 @@
                         <h2>略懂</h2>
                     </div>
                     <div class="skill-outter-line">
-                        <div class="skill-inner-line"></div>
+                        <div class="skill-inner-line" style="width: 45%;"></div>
                     </div>
                 </div>
 
@@ -144,7 +147,7 @@
                         <h2>略懂</h2>
                     </div>
                     <div class="skill-outter-line">
-                        <div class="skill-inner-line"></div>
+                        <div class="skill-inner-line" style="width: 55%;"></div>
                     </div>
                 </div>
 
@@ -154,7 +157,7 @@
                         <h2>精熟</h2>
                     </div>
                     <div class="skill-outter-line">
-                        <div class="skill-inner-line"></div>
+                        <div class="skill-inner-line" style="width: 90%;"></div>
                     </div>
                 </div>
 
@@ -164,7 +167,7 @@
                         <h2>精熟</h2>
                     </div>
                     <div class="skill-outter-line">
-                        <div class="skill-inner-line"></div>
+                        <div class="skill-inner-line" style="width: 85%;"></div>
                     </div>
                 </div>
 
@@ -174,7 +177,7 @@
                         <h2>精熟</h2>
                     </div>
                     <div class="skill-outter-line">
-                        <div class="skill-inner-line"></div>
+                        <div class="skill-inner-line" style="width: 90%;"></div>
                     </div>
                 </div>
 
@@ -184,7 +187,7 @@
                         <h2>精熟</h2>
                     </div>
                     <div class="skill-outter-line">
-                        <div class="skill-inner-line"></div>
+                        <div class="skill-inner-line" style="width: 70%;"></div>
                     </div>
                 </div>
 
@@ -194,11 +197,53 @@
                         <h2>略懂</h2>
                     </div>
                     <div class="skill-outter-line">
-                        <div class="skill-inner-line"></div>
+                        <div class="skill-inner-line" style="width: 50%;"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="resume">
+
+            <h1 class="sub-heading">記事</h1>
+            <div class="divider"></div>
+            <p class="sub-para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+
+            <div class="resume-row">
+                <div class="resume-cols">
+                    <h2>摘要</h2>
+                    <div class="my-info">
+                        <h3>Martin Huang</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        </p>
+                        <ul>
+                            <li>臺中, 北屯區</li>
+                            <li>0939-0xx-2xx</li>
+                            <li>darkknight411032@gmail.com</li>
+                        </ul>
+                    </div>
+
+                    <h2>學歷</h2>
+                    <div class="my-edu">
+                        <h3>資訊工程系</h3>
+                        <span class="sp-box">2018-2022</span>
+                        <p>國立台中科技大學進修部</p>
                     </div>
                 </div>
 
+                <div class="resume-cols">
+                    <h2>工作經歷</h2>
+                    <div class="exp"></div>
+                        <h3>助理工程師</h3>
+                        <span class="sp-box">2022-仍在職</span>
+                        <p>夢旅人開發團隊</p>
+                    </div>
+
+
             </div>
+
         </section>
 
     </main>
@@ -208,10 +253,4 @@
 </body>
 </html>
 
-<!-- 49:39 
-<h2>Windows系統</h2>
-<h2>精熟</h2>
-<h2>MacOS系統</h2>
-<h2>精熟</h2>
-<h2>Linux系統</h2>
-<h2>略懂</h2> -->
+<!-- 1:05:19 -->
