--- a/index.html
+++ b/index.html
@@ -235,13 +235,26 @@
 
                 <div class="resume-cols">
                     <h2>工作經歷</h2>
-                    <div class="exp"></div>
+                    <div class="exp">
                         <h3>助理工程師</h3>
                         <span class="sp-box">2022-仍在職</span>
                         <p>夢旅人開發團隊</p>
+                        <ul>
+                            <li>學弟介紹的程式開發團隊，案子有點少<br>
+                                但負責人非常樂於分享，我很感謝他們願意教我實戰技術</li>
+                        </ul>
                     </div>
-
-
+                    <div class="exp">
+                        <h3>行政工讀</h3>
+                        <span class="sp-box">2020-2022</span>
+                        <p>國立台中科技大學資訊工程系</p>
+                        <ul>
+                            <li>因緣際會之下到學校擔任工讀生，要做的事情非常多元化<br>
+                                凡舉開會事宜.電腦維護.系統派送等等<br>
+                                在學校工讀的日子可以說是我工讀生涯最開心的時間</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
 
         </section>
