--- a/index.html
+++ b/index.html
@@ -208,18 +208,16 @@
             <h1 class="sub-heading">記事</h1>
             <div class="divider"></div>
             <p class="sub-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                欲知更多資訊，敬請移駕到人力銀行過目我的履歷，謝謝<br>
             </p>
 
             <div class="resume-row">
                 <div class="resume-cols">
-                    <h2>摘要</h2>
+                    <h2>個人資訊</h2>
                     <div class="my-info">
                         <h3>Martin Huang</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                        </p>
                         <ul>
-                            <li>臺中, 北屯區</li>
+                            <li>臺中市 北屯區</li>
                             <li>0939-0xx-2xx</li>
                             <li>darkknight411032@gmail.com</li>
                         </ul>
@@ -227,31 +225,37 @@
 
                     <h2>學歷</h2>
                     <div class="my-edu">
-                        <h3>資訊工程系</h3>
+                        <h3>國立台中科技大學進修部</h3>
                         <span class="sp-box">2018-2022</span>
-                        <p>國立台中科技大學進修部</p>
+                        <p>資訊工程系</p>
+                    </div>
+                    <div class="my-edu">
+                        <h3>私立新民高中</h3>
+                        <span class="sp-box">2015-2018</span>
+                        <p>資訊科</p>
                     </div>
                 </div>
 
                 <div class="resume-cols">
                     <h2>工作經歷</h2>
                     <div class="exp">
-                        <h3>助理工程師</h3>
+                        <h3>夢旅人開發團隊</h3>
                         <span class="sp-box">2022-仍在職</span>
-                        <p>夢旅人開發團隊</p>
+                        <p>助理工程師</p>
                         <ul>
-                            <li>學弟介紹的程式開發團隊，案子有點少<br>
+                            <li>學弟介紹的程式開發團隊，雖然案子有點少<br>
                                 但負責人非常樂於分享，我很感謝他們願意教我實戰技術</li>
                         </ul>
                     </div>
                     <div class="exp">
-                        <h3>行政工讀</h3>
+                        <h3>國立台中科技大學資訊工程系</h3>
                         <span class="sp-box">2020-2022</span>
-                        <p>國立台中科技大學資訊工程系</p>
+                        <p>行政工讀</p>
                         <ul>
-                            <li>因緣際會之下到學校擔任工讀生，要做的事情非常多元化<br>
+                            <li>因緣際會之下到學校擔任工讀生，要做的事情非常多<br>
                                 凡舉開會事宜.電腦維護.系統派送等等<br>
-                                在學校工讀的日子可以說是我工讀生涯最開心的時間</li>
+                                但因為難度偏低加上老師主任對我們非常友善<br>
+                                所以在校內工讀期間非常輕鬆自在</li>
                         </ul>
                     </div>
                 </div>
