--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
                         <span class="sp-box">2022-仍在職</span>
                         <p>助理工程師</p>
                         <ul>
-                            <li>學弟介紹的程式開發團隊，雖然案子有點少<br>
-                                但負責人非常樂於分享，我很感謝他們願意教我實戰技術</li>
+                            <li>學弟介紹的程式開發團隊<br>
+                                負責人非常樂於分享，我很感謝他們願意教我實戰技術</li>
                         </ul>
                     </div>
                     <div class="exp">
@@ -252,9 +252,9 @@
                         <span class="sp-box">2020-2022</span>
                         <p>行政工讀</p>
                         <ul>
-                            <li>因緣際會之下到學校擔任工讀生，要做的事情非常多<br>
-                                凡舉開會事宜.電腦維護.系統派送等等<br>
-                                但因為難度偏低加上老師主任對我們非常友善<br>
+                            <li>校內工讀生的職務<br>
+                                包括開會事宜.電腦維護.系統派送等等<br>
+                                難度偏低加上老師主任對我們非常友善<br>
                                 所以在校內工讀期間非常輕鬆自在</li>
                         </ul>
                     </div>
@@ -270,4 +270,4 @@
 </body>
 </html>
 
-<!-- 1:05:19 -->
+<!-- 1:10:00 -->
