--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
             <p class="sub-para">
                 資工的學生嘛，程式語言一定都學過<br>
                 有些是上課教過，期末就忘了<br>
-                有些是課堂沒教，自己有興趣加減摸索玩玩看<br>
-                三家電腦系統都操作過，Linux算是這三個裡面最不熟的<br>
-                天天在摸IDE和Office說不熟練好像有點說不過去
+                有些是課堂沒教，自己有興趣摸索玩玩看<br>
+                OS御三家都操作過，Linux算是這三個裡面最不熟的<br>
+                IDE和Office天天在摸說不熟練好像有點說不過去
             </p>
             <div class="skill-row">
 
