--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 有些是上課教過，期末就忘了<br>
                 有些是課堂沒教，自己有興趣摸索玩玩看<br>
                 OS御三家都操作過，Linux算是這三個裡面最不熟的<br>
-                IDE和Office天天在摸說不熟練好像有點說不過去
+                IDE和Office天天在摸，說不熟練好像有點說不過去
             </p>
             <div class="skill-row">
 
