--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </ul>
         </nav>
         <div class="footer">
-            <p>&copy; Copyright 2023<br>Designed By <a href="https://MartinHuang.ooxx" target="_blank">MartinHuang.ooxx</a></p>
+            <p>&copy; Copyright 2023<br>Designed By MartinHuang</p>
         </div>
     </header>
 
@@ -208,7 +208,8 @@
             <h1 class="sub-heading">記事</h1>
             <div class="divider"></div>
             <p class="sub-para">
-                欲知更多資訊，敬請移駕到人力銀行過目我的履歷，謝謝<br>
+                簡單收錄一些個人經歷<br>
+                欲知更多資訊，敬請移駕到人力銀行過目我的履歷，謝謝
             </p>
 
             <div class="resume-row">
@@ -227,40 +228,47 @@
                     <div class="my-edu">
                         <h3>國立台中科技大學進修部</h3>
                         <span class="sp-box">2018-2022</span>
-                        <p>資訊工程系</p>
+                        <p><i class="fa-solid fa-toolbox"></i> 資訊工程系</p>
                     </div>
                     <div class="my-edu">
                         <h3>私立新民高中</h3>
                         <span class="sp-box">2015-2018</span>
-                        <p>資訊科</p>
+                        <p><i class="fa-solid fa-computer"></i> 資訊科</p>
                     </div>
                 </div>
 
                 <div class="resume-cols">
                     <h2>工作經歷</h2>
-                    <div class="exp">
+                    <div class="work-exp">
                         <h3>夢旅人開發團隊</h3>
                         <span class="sp-box">2022-仍在職</span>
                         <p>助理工程師</p>
                         <ul>
                             <li>學弟介紹的程式開發團隊<br>
-                                負責人非常樂於分享，我很感謝他們願意教我實戰技術</li>
+                                負責人非常樂於分享，我很感謝他們教我Git版控</li>
                         </ul>
                     </div>
-                    <div class="exp">
+                    <div class="work-exp">
                         <h3>國立台中科技大學資訊工程系</h3>
                         <span class="sp-box">2020-2022</span>
                         <p>行政工讀</p>
                         <ul>
-                            <li>校內工讀生的職務<br>
-                                包括開會事宜.電腦維護.系統派送等等<br>
-                                難度偏低加上老師主任對我們非常友善<br>
-                                所以在校內工讀期間非常輕鬆自在</li>
+                            <li>主要負責會議事務.電腦維護.系統派送.遞交公文<br>
+                                閒暇之餘可利用時間自習<br>
+                                這段時間是我最充實的時光</li>
                         </ul>
                     </div>
                 </div>
             </div>
 
+        </section>
+
+        <section id="profolio">
+            <h1 class="sub-heading">主題部落格連結</h1>
+            <div class="divider"></div>
+            <p class="sub-para">
+                Lorem ipsum dolor sit amet consectetur adipisicing.
+            </p>
         </section>
 
     </main>
