--- a/index.html
+++ b/index.html
@@ -269,6 +269,67 @@
             <p class="sub-para">
                 Lorem ipsum dolor sit amet consectetur adipisicing.
             </p>
+
+
+            <div class="port-row">
+
+                <div class="port-item">
+                    <div class="port-img">
+                        <img src="img/portfolio-1.jpg" alt="">
+                    </div>
+                    <div class="port-info">
+                        <h4>財經版</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <a href="#"><i class="fa-solid fa-square-up-right"></i></a>
+                    </div>
+                </div>
+
+                <div class="port-item">
+                    <div class="port-img">
+                        <img src="img/portfolio-2.jpg" alt="">
+                    </div>
+                    <div class="port-info">
+                        <h4>影評版</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <a href="#"><i class="fa-solid fa-square-up-right"></i></a>
+                    </div>
+                </div>
+
+                <div class="port-item">
+                    <div class="port-img">
+                        <img src="img/portfolio-3.jpg" alt="">
+                    </div>
+                    <div class="port-info">
+                        <h4>旅遊版</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <a href="#"><i class="fa-solid fa-square-up-right"></i></a>
+                    </div>
+                </div>
+
+                <div class="port-item">
+                    <div class="port-img">
+                        <img src="img/portfolio-4.jpg" alt="">
+                    </div>
+                    <div class="port-info">
+                        <h4>科技版</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <a href="#"><i class="fa-solid fa-square-up-right"></i></a>
+                    </div>
+                </div>
+
+                <div class="port-item">
+                    <div class="port-img">
+                        <img src="img/portfolio-5.jpg" alt="">
+                    </div>
+                    <div class="port-info">
+                        <h4>烈酒雪茄版</h4>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <a href="#"><i class="fa-solid fa-square-up-right"></i></a>
+                    </div>
+                </div>
+
+            </div>
+
         </section>
 
     </main>
@@ -278,4 +339,4 @@
 </body>
 </html>
 
-<!-- 1:10:00 -->
+<!-- 1:18:22 -->
