--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@
         </section>
 
         <section id="profolio">
-            <h1 class="sub-heading">主題部落格連結</h1>
+            <h1 class="sub-heading">連結</h1>
             <div class="divider"></div>
             <p class="sub-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing.
+                以下都是建立在個人興趣所經營的主題式部落格<br>
             </p>
 
 
@@ -275,10 +275,10 @@
 
                 <div class="port-item">
                     <div class="port-img">
-                        <img src="img/portfolio-1.jpg" alt="">
+                        <img src="img/blog-1.jpg" alt="">
                     </div>
                     <div class="port-info">
-                        <h4>財經版</h4>
+                        <h4>經濟市場</h4>
                         <p>Lorem ipsum dolor sit amet.</p>
                         <a href="#"><i class="fa-solid fa-square-up-right"></i></a>
                     </div>
@@ -286,10 +286,10 @@
 
                 <div class="port-item">
                     <div class="port-img">
-                        <img src="img/portfolio-2.jpg" alt="">
+                        <img src="img/blog-2.jpg" alt="">
                     </div>
                     <div class="port-info">
-                        <h4>影評版</h4>
+                        <h4>電影評論</h4>
                         <p>Lorem ipsum dolor sit amet.</p>
                         <a href="#"><i class="fa-solid fa-square-up-right"></i></a>
                     </div>
@@ -297,10 +297,10 @@
 
                 <div class="port-item">
                     <div class="port-img">
-                        <img src="img/portfolio-3.jpg" alt="">
+                        <img src="img/blog-3.jpg" alt="">
                     </div>
                     <div class="port-info">
-                        <h4>旅遊版</h4>
+                        <h4>旅遊規劃</h4>
                         <p>Lorem ipsum dolor sit amet.</p>
                         <a href="#"><i class="fa-solid fa-square-up-right"></i></a>
                     </div>
@@ -308,10 +308,10 @@
 
                 <div class="port-item">
                     <div class="port-img">
-                        <img src="img/portfolio-4.jpg" alt="">
+                        <img src="img/blog-4.jpg" alt="">
                     </div>
                     <div class="port-info">
-                        <h4>科技版</h4>
+                        <h4>Event與WWDC</h4>
                         <p>Lorem ipsum dolor sit amet.</p>
                         <a href="#"><i class="fa-solid fa-square-up-right"></i></a>
                     </div>
@@ -319,10 +319,10 @@
 
                 <div class="port-item">
                     <div class="port-img">
-                        <img src="img/portfolio-5.jpg" alt="">
+                        <img src="img/blog-5.jpg" alt="">
                     </div>
                     <div class="port-info">
-                        <h4>烈酒雪茄版</h4>
+                        <h4>奢華享受</h4>
                         <p>Lorem ipsum dolor sit amet.</p>
                         <a href="#"><i class="fa-solid fa-square-up-right"></i></a>
                     </div>
