--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <h1 class="sub-heading">連結</h1>
             <div class="divider"></div>
             <p class="sub-para">
-                以下都是建立在個人興趣所經營的主題式部落格<br>
+                以下是個人的一些小興趣，正慢慢將它發展成個人部落格<br>
             </p>
 
 
@@ -279,8 +279,8 @@
                     </div>
                     <div class="port-info">
                         <h4>經濟市場</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <a href="#"><i class="fa-solid fa-square-up-right"></i></a>
+                        <p>Finance Notes</p>
+                        <a href="#"><i class="fa-regular fa-window-restore"></i></a>
                     </div>
                 </div>
 
@@ -290,8 +290,8 @@
                     </div>
                     <div class="port-info">
                         <h4>電影評論</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <a href="#"><i class="fa-solid fa-square-up-right"></i></a>
+                        <p>Movie Review</p>
+                        <a href="#"><i class="fa-regular fa-window-restore"></i></a>
                     </div>
                 </div>
 
@@ -301,8 +301,8 @@
                     </div>
                     <div class="port-info">
                         <h4>旅遊規劃</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <a href="#"><i class="fa-solid fa-square-up-right"></i></a>
+                        <p>Travel</p>
+                        <a href="#"><i class="fa-regular fa-window-restore"></i></a>
                     </div>
                 </div>
 
@@ -312,8 +312,8 @@
                     </div>
                     <div class="port-info">
                         <h4>Event與WWDC</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <a href="#"><i class="fa-solid fa-square-up-right"></i></a>
+                        <p>Apple Event and WWDC</p>
+                        <a href="#"><i class="fa-regular fa-window-restore"></i></a>
                     </div>
                 </div>
 
@@ -323,14 +323,14 @@
                     </div>
                     <div class="port-info">
                         <h4>奢華享受</h4>
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <a href="#"><i class="fa-solid fa-square-up-right"></i></a>
+                        <p>Liquor and Cigar</p>
+                        <a href="#"><i class="fa-regular fa-window-restore"></i></a>
                     </div>
                 </div>
-
             </div>
-
         </section>
+
+        <section id="else"></section>
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
@@ -339,4 +339,4 @@
 </body>
 </html>
 
-<!-- 1:18:22 -->
+<!-- 1:26:38 -->
