--- a/index.html
+++ b/index.html
@@ -330,7 +330,67 @@
             </div>
         </section>
 
-        <section id="else"></section>
+        <section id="else">
+
+            <h1 class="sub-heading">其他</h1>
+            <div class="divider"></div>
+            <p class="sub-para">
+                大學期間的作品.專案.比賽經歷<br>
+                有些檔案剛好沒有儲存到，敬請見諒<br>
+            </p>
+
+            <div class="else-row">
+
+                <div class="else-box">
+                    <div class="icon">
+                        <i class="fa-solid fa-lightbulb"></i>
+                    </div>
+                    <div class="else-info">
+                        <h4>AI光影與應用結合</h4>
+                    </div>
+                </div>
+
+                <div class="else-box">
+                    <div class="icon">
+                        <i class="fa-brands fa-bitcoin"></i>
+                    </div>
+                    <div class="else-info">
+                        <h4>投資小幫手-虛擬貨幣回測</h4>
+                    </div>
+                </div>
+
+                <div class="else-box">
+                    <div class="icon">
+                        <i class="fa-solid fa-paw"></i>
+                    </div>
+                    <div class="else-info">
+                        <h4>2022台北市市長盃資料應用黑客松</h4>
+                    </div>
+                </div>
+
+                <div class="else-box">
+                    <div class="icon">
+                        <i class="fa-solid fa-brain"></i>
+                    </div>
+                    <div class="else-info">
+                        <h4>玉山人工智慧挑戰賽2021夏季賽</h4>
+                    </div>
+                </div>
+
+                <div class="else-box">
+                    <div class="icon">
+                        <i class="fa-solid fa-person-digging"></i>
+                    </div>
+                    <div class="else-info">
+                        <h4>工程施工即時影像系統</h4>
+                    </div>
+                </div>
+
+
+
+            </div>
+
+        </section>
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
@@ -339,4 +399,4 @@
 </body>
 </html>
 
-<!-- 1:26:38 -->
+<!-- 1:30:07 -->
